# hyperfan

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.sh  hyperfan.desktop  run.sh
hf-core/: Cargo.toml
hf-core/src/: constants.rs  daemon_client.rs  display.rs  error.rs  lib.rs  service.rs  settings.rs  system.rs
hf-core/src/data/: config.rs  mod.rs  persistence.rs  types.rs  validation.rs
hf-core/src/engine/: curve.rs  mod.rs
hf-core/src/fingerprinting/: anchors.rs  drift_correction.rs  extractor.rs  hardware_change_detection.rs  matcher.rs  mod.rs  runtime.rs  startup.rs  store.rs  validation.rs  validator.rs
hf-core/src/hw/: binding.rs  capture.rs  control.rs  detection.rs  fingerprint.rs  gpu.rs  hardware.rs  mod.rs
hf-daemon/: Cargo.toml  hyperfan-modules.conf  hyperfan.service
hf-daemon/src/: drift_protection.rs  fan_control.rs  main.rs  server.rs
hf-error/: Cargo.toml
hf-error/src/: lib.rs
hf-gpu/: Cargo.toml
hf-gpu/src/: constants.rs  lib.rs  types.rs
hf-gpu/src/amd/: mod.rs
hf-gpu/src/intel/: mod.rs
hf-gpu/src/nvidia/: mod.rs
hf-gtk/: Cargo.toml
hf-gtk/src/: app.rs  cli.rs  daemon_health.rs  main.rs  perf.rs  runtime.rs  tray.rs
hf-gtk/src/styles/: accessibility.css  buttons.css  cards.css  forms.css  graphs.css  layout.css  lists.css  mod.css  navigation.css  status.css  typography.css  utilities.css  variables.css  window-controls.css
hf-gtk/src/widgets/: add_curve_dialog.rs  add_pair_dialog.rs  cpu_info_card.rs  curve_card.rs  curve_editor.rs  curves_page.rs  dashboard.rs  detection_dialog.rs  ec_control_page.rs  edit_curve_dialog.rs  fan_card.rs  fan_pairing_page.rs  gpu_card.rs  gpu_info_card.rs  graphs_page.rs  mod.rs  nav_sidebar.rs  sensors_page.rs  settings_page.rs  system_info.rs  temp_monitor.rs
hf-gtk/src/window/: dialogs.rs  mod.rs  navigation.rs  titlebar.rs
hf-protocol/: Cargo.toml
hf-protocol/src/: lib.rs
hyperfan-core/: Cargo.toml
hyperfan-core/src/: lib.rs
icons/hicolor/: index.theme
scripts/: fresh_start.sh
src/: app.rs  config.rs  curves.rs  ec.rs  events.rs  handlers.rs  hwmon.rs  lib.rs  logger.rs  main.rs  service.rs  system.rs  test_utils.rs  ui.rs
src/hyperfan-gui/: index.html  package-lock.json  package.json  vite.config.ts
src/hyperfan-gui/src/: App.tsx  layout-config.json
src/hyperfan-gui/src-tauri/: Cargo.toml  tauri.conf.json
src/hyperfan-gui/src-tauri/src/: main.rs
src/hyperfan-gui/src/components/: AutoDetectModal.tsx  CurveCard.tsx  FanControlCard.tsx  FanMapperView.tsx  LayoutGrid.tsx  MixerCard.tsx  SensorCard.tsx
src/hyperfan-gui/src/types/: layout.ts
src/hyperfan-gui/src/utils/: layout.ts
src/ui/: ui_components.rs  ui_curve_editor.rs  ui_main.rs
tests/: integration_tests.rs
