[package]
name = "hyperfan"
version = "0.3.8"
edition = "2021"
authors = ["henry kleyn"]
license = "GPL3+"
description = "Fan control TUI for Linux using hwmon (read sensors, optional PWM control)"
repository = "https://example.com/hyperfan"

[dependencies]
anyhow = "1.0"
crossterm = "0.28"
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
thiserror = "1.0"
libc = "0.2"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3.8"
mockall = "0.12"
serial_test = "3.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
