[package]
name = "hf-gtk"
version = "0.4.96"
edition = "2021"
authors = ["henry kleyn"]
license = "GPL-3.0-or-later"
description = "GTK4 GUI for Hyperfan fan control"

[[bin]]
name = "hyperfan"
path = "src/main.rs"

[dependencies]
hf-core = { path = "../hf-core" }
hf-error = { path = "../hf-error" }
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_6"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
ksni = "0.2"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
