[package]
name = "hf-protocol"
version = "0.1.6"
edition = "2021"
authors = ["henry kleyn"]
license = "GPL-3.0-or-later"

description = "Shared IPC protocol types for Hyperfan"

[lib]
name = "hf_protocol"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
