[package]
name = "hyperfan-core"
version = "0.1.0"
edition = "2021"
authors = ["henry kleyn"]
license = "GPL-3.0-or-later"
description = "Core library for Hyperfan GUI/CLI"

[lib]
name = "hyperfan_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
